--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,9 +5,14 @@ services:
       context: ../
       dockerfile: ./docker/Dockerfile
     volumes:
-      - ../src:/app
+      - ../src:/app:cached
       - /app/node_modules
     ports:
       - "3000:3000"
+    tty: true
     environment:
       - HOST=0.0.0.0
+      - port=3000
+      - CHOKIDAR_USEPOLLING=true
+volumes:
+  node_modules:
